--- a/favorites.html
+++ b/favorites.html
@@ -24,6 +24,7 @@
 			<nav class="top_nav">
 				<span class="nav_item"><a href="index.html">About me</a></span>
 				<span class="nav_item"><a href="favorites.html">My favorites</a></span>
+				<span class="nav_item"><a href="test.html" target="_blank">To Do List</a></span>
 			</nav>
 		</div>
 
